show submit page from statistics page

--- a/clients/public/index.html
+++ b/clients/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="X2MINT - Website for create and take a test online 💯"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/plant-line.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>X2M!NT</title>
   </head>
