fix images path

--- a/clients/public/index.html
+++ b/clients/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/plant-line.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/icons/plant-line.svg" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,7 @@
       name="description"
       content="X2MINT - Website for create and take a test online 💯"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/plant-line.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/icons/plant-line.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>X2M!NT</title>
   </head>
