--- a/clients/public/index.html
+++ b/clients/public/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image:height" content="720" />
     <meta property="og:type" content="website" />
   </head>
-  <body>
+  <body onselectstart='return false;'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
