--- a/clients/public/index.html
+++ b/clients/public/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>X2M!NT</title>
     <meta property="og:title" content="X2M!NT" />
-    <meta property=og:image content='https://ex2mint.vercel.app/assets/icons/thumbnail.png'/>
+    <meta property=og:image content='https://x2mint.vercel.app/assets/icons/thumbnail.png'/>
     <meta property="og:description" content="X2MINT - Website for create and take tests online 💯" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
