--- a/clients/public/index.html
+++ b/clients/public/index.html
@@ -25,6 +25,7 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
     <meta property="og:type" content="website" />
+    <script defer src="%PUBLIC_URL%/scripts/face-api.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
